fix: gap between text and copy button

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -426,7 +426,7 @@ tr:last-child td {
 .feed-id-container {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 2px;
 }
 
 /* Feed ID text */
